# rokoko_houdini_plugin

./: .gitignore  README.md
OBJ_RokokoFrontend/: ActorInfo.h  BoneInfo.h  CMakeLists.txt  OBJ_RokokoFrontend.C  OBJ_RokokoFrontend.h  PropTrackerInfo.h  RokokoClientSocket.h  RokokoData.C  RokokoData.h  RokokoDataParser.C  RokokoDataParser.cpp  RokokoDataParser.h  RokokoReceiver.C  RokokoReceiver.cpp  RokokoReceiver.h  RokokoSocketReader.C  RokokoSocketReader.h  python_socket.py  rokoko_input.txt
SIM_RokokoFrontend/: CMakeLists.txt  OBJ_RokokoFrontend.C  PropTrackerInfo.h  RokokoData.C  SIM_RokokoData.C  SIM_RokokoData.h  SIM_RokokoFrontend.C  SIM_RokokoFrontend.h  UT_RokokoSocket.h  python_socket.py
